# lardataalg

./: CMakeLists.txt  CMakePresets.json  README.md
lardataalg/: CMakeLists.txt
lardataalg/DetectorInfo/: CMakeLists.txt  ClockConstants.h  DetectorClocks.h  DetectorClocksData.h  DetectorClocksException.h  DetectorClocksStandard.cxx  DetectorClocksStandard.h  DetectorClocksStandardDataFor.h  DetectorClocksStandardTestHelpers.h  DetectorClocksStandardTriggerLoader.h  DetectorProperties.h  DetectorPropertiesData.cc  DetectorPropertiesData.h  DetectorPropertiesStandard.cxx  DetectorPropertiesStandard.h  DetectorPropertiesStandardTestHelpers.h  DetectorTimingTypes.h  DetectorTimings.h  ElecClock.cxx  ElecClock.h  LArProperties.h  LArPropertiesStandard.cxx  LArPropertiesStandard.h  LArPropertiesStandardTestHelpers.h  RunHistory.h  RunHistoryStandard.cxx  RunHistoryStandard.h  detectorclocks_bo.fcl  detectorclocks_lartpcdetector.fcl  detectorproperties.fcl  detectorproperties_lartpcdetector.fcl  larproperties.fcl  larproperties_bo.fcl  larproperties_lartpcdetector.fcl
lardataalg/Dumpers/: CMakeLists.txt  DumperBase.h
lardataalg/Dumpers/RawData/: CMakeLists.txt  OpDetWaveform.h
lardataalg/MCDumpers/: CMakeLists.txt  MCDumperUtils.cxx  MCDumperUtils.h  MCDumpers.h
lardataalg/Utilities/: CMakeLists.txt  MappedContainer.h  MultipleChoiceSelection.h  StatCollector.h  constexpr_math.h  intervals.h  intervals_fhicl.h  quantities.h  quantities_fhicl.h
lardataalg/Utilities/quantities/: datasize.h  electromagnetism.h  electronics.h  energy.h  frequency.h  spacetime.h
lardataalg/lardataalg/DetectorInfo/: ClockConstants.h  DetectorClocks.h  DetectorClocksStandard.cxx  DetectorClocksStandard.h  DetectorClocksStandardTestHelpers.h  DetectorProperties.h  DetectorPropertiesStandard.cxx  DetectorPropertiesStandard.h  DetectorPropertiesStandardTestHelpers.h  LArProperties.h  LArPropertiesStandard.cxx  LArPropertiesStandard.h  LArPropertiesStandardTestHelpers.h  RunHistoryStandard.cxx  RunHistoryStandard.h  SimpleTimeService.h  detectorclocks.fcl  detectorclocks_csu40L.fcl  detectorproperties.fcl  detectorproperties_bo.fcl  larproperties.fcl
lardataalg/test/DetectorInfo/: CMakeLists.txt  DetectorClocksStandard_test.cc  DetectorPropertiesStandard_test.cc  LArPropertiesStandard_test.cc  ProviderPack_test.cc  clockstest_csu40l.fcl  clockstest_lartpcdetector.fcl
test/: CMakeLists.txt
test/DetectorInfo/: CMakeLists.txt  DetectorClocksStandard_test.cc  DetectorPropertiesStandard_test.cc  DetectorTimingTypes_test.cc  DetectorTimingsStandard_test.cc  LArPropertiesStandard_test.cc  ProviderPack_test.cc  clockstest_bo.fcl  clockstest_csu40l.fcl  clockstest_standard.fcl  dettest_bo.fcl  dettest_lartpcdetector.fcl  lartest_bo.fcl  lartest_lartpcdetector.fcl  lartest_standard.fcl
test/Utilities/: CMakeLists.txt  MappedContainer_test.cc  MultipleChoiceSelection_test.cc  StatCollector_test.cc  constexpr_math_test.cc  datasize_test.cc  disable_boost_fpc_tolerance.hpp  energy_test.cc  frequency_test.cc  intervals_fhicl_test.cc  intervals_test.cc  quantities_fhicl_test.cc  quantities_test.cc  space_test.cc
ups/: product_deps  setup_for_development
